--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,7 @@ jobs:
           pip install poetry==${{ matrix.poetry-version }}
 
       - name: Install Dependencies
+        uses: actions/cache@v2
         with:
           cache: 'poetry'
         run: |
