--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,16 +28,21 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install pip and poetry ${{ matrix.poetry-version }}
+        with:
+          python-version: '3.10'
         run: |
           python -m pip install --upgrade pip
           pip install poetry==${{ matrix.poetry-version }}
 
       - name: Install Dependencies
         with:
+          python-version: '3.10'
           cache: 'poetry'
         run: poetry install --no-interaction --no-root
 
       - name: Pytest
+        with:
+          python-version: '3.10'
         run: |
           cd ./mlapi
           poetry run pytest -vv
